Ajout de différents logos dans `/images/assets/marques`, mise à jour dans `index.html` et correction de l'alignement des logos dans le fichier `index.css`

--- a/styles/index.css
+++ b/styles/index.css
@@ -27,6 +27,10 @@ body {
 	justify-content: space-around;
 }
 
+.marque img, .marque svg {
+	height: 100%;
+}
+
 .news-item:first-child, .best-seller-item:first-child, .promo-item:first-child {
 	margin-left: 5rem;
 }
